workout-app/src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.workoutSection{
  margin-bottom: 1rem;
}

.bodyWeightSection{
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.personalBestSection{
  margin-top: 1rem;
}

